# bibtool

./: README.md  pyproject.toml
examples/: filter_abstracts.py
src/bibtool/: lexical_analysis.py  sci_parser.py  search_papers.py  zotero.py
src/bibtool/utils/: __init__.py  auth_cache.py  field_parsing.py  math.py  rich.py  sqlite.py
